// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check the ColumnMenu class it should be return columns table when createTable() is called 1`] = `
Array [
  "[2m|[22m [4mName[24m      [2m|[22m [4mType[24m     [2m|[22m [4mRequired[24m [2m|[22m [4mDefault[24m   [2m|[22m [4mIndex[24m     [2m|[22m [4mUnique[24m [2m|[22m [4mSparse[24m [2m|[22m",
  "[2m|[22m _id       [2m|[22m objectId [2m|[22m          [2m|[22m           [2m|[22m           [2m|[22m        [2m|[22m        [2m|[22m",
  "[2m|[22m column1   [2m|[22m string   [2m|[22m          [2m|[22m           [2m|[22m           [2m|[22m        [2m|[22m        [2m|[22m",
  "[2m|[22m column2   [2m|[22m object   [2m|[22m    ✔     [2m|[22m           [2m|[22m -1        [2m|[22m        [2m|[22m        [2m|[22m",
  "[2m|[22m createdAt [2m|[22m date     [2m|[22m          [2m|[22m           [2m|[22m           [2m|[22m        [2m|[22m        [2m|[22m",
  "[2m|[22m updatedAt [2m|[22m date     [2m|[22m          [2m|[22m           [2m|[22m           [2m|[22m        [2m|[22m        [2m|[22m",
  "",
]
`;

exports[`Check the ColumnMenu class it should be return index table column when createTableIndexRow() is called 1`] = `
Array [
  -1,
  "",
  "",
]
`;

exports[`Check the ColumnMenu class it should be return index table column when createTableIndexRow() is called 2`] = `
Array [
  -1,
  "✔",
  "",
]
`;

exports[`Check the ColumnMenu class it should be return index table column when createTableIndexRow() is called 3`] = `
Array [
  -1,
  "",
  "✔",
]
`;

exports[`Check the ColumnMenu class it should be return menu selection when exec() is called with type "array" 1`] = `
Array [
  Separator {
    "line": "[2m[4mColumns list[24m[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m- No columns defined -[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
  Object {
    "name": "Create new subcolumn",
    "short": "[31mCommand - Create subcolumn[39m",
    "value": Object {
      "action": "create",
    },
  },
  Object {
    "name": "Edit column",
    "short": "[31mCommand - Edit column[39m",
    "value": Object {
      "action": "edit",
      "data": undefined,
    },
  },
  Object {
    "name": "Remove column",
    "short": "[31mCommand - Remove column[39m",
    "value": Object {
      "action": "remove",
      "data": undefined,
    },
  },
  Object {
    "name": "Back",
    "short": "[31mCommand - Back[39m",
    "value": Object {
      "action": "back",
    },
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
]
`;

exports[`Check the ColumnMenu class it should be return menu selection when exec() is called with type "object" 1`] = `
Array [
  Separator {
    "line": "[2m[4mColumns list[24m[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m- No columns defined -[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
  Object {
    "name": "Create new subcolumn",
    "short": "[31mCommand - Create subcolumn[39m",
    "value": Object {
      "action": "create",
    },
  },
  Object {
    "name": "Edit column",
    "short": "[31mCommand - Edit column[39m",
    "value": Object {
      "action": "edit",
      "data": undefined,
    },
  },
  Object {
    "name": "Remove column",
    "short": "[31mCommand - Remove column[39m",
    "value": Object {
      "action": "remove",
      "data": undefined,
    },
  },
  Object {
    "name": "Back",
    "short": "[31mCommand - Back[39m",
    "value": Object {
      "action": "back",
    },
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
]
`;

exports[`Check the ColumnMenu class it should be return menu selection when exec() is called with type "string" 1`] = `
Array [
  Object {
    "name": "Edit column",
    "short": "[31mCommand - Edit column[39m",
    "value": Object {
      "action": "edit",
      "data": undefined,
    },
  },
  Object {
    "name": "Remove column",
    "short": "[31mCommand - Remove column[39m",
    "value": Object {
      "action": "remove",
      "data": undefined,
    },
  },
  Object {
    "name": "Back",
    "short": "[31mCommand - Back[39m",
    "value": Object {
      "action": "back",
    },
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
]
`;

exports[`Check the ColumnMenu class it should be return menu selection when getChoiceList() is called with columns 1`] = `
Array [
  Separator {
    "line": "[2m[2m|[2m [4mName[24m      [2m|[2m [4mType[24m     [2m|[2m [4mRequired[24m [2m|[2m [4mDefault[24m   [2m|[2m [4mIndex[24m     [2m|[2m [4mUnique[24m [2m|[2m [4mSparse[24m [2m|[2m[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m[2m|[2m _id       [2m|[2m objectId [2m|[2m          [2m|[2m           [2m|[2m           [2m|[2m        [2m|[2m        [2m|[2m[22m",
    "type": "separator",
  },
  Object {
    "name": "[2m|[22m column1   [2m|[22m string   [2m|[22m          [2m|[22m           [2m|[22m           [2m|[22m        [2m|[22m        [2m|[22m",
    "short": "Column - column1",
    "value": Object {
      "data": ColumnDataset {
        "collection": CollectionDataset {
          "columns": Array [
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "_id",
                "type": "objectId",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            [Circular],
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "column2",
                "required": true,
                "subColumns": Array [],
                "type": "object",
              },
              "columns": Array [],
              "index": IndexDataset {
                "columns": Array [
                  Array [
                    [Circular],
                    -1,
                  ],
                ],
                "index": Object {
                  "columns": Object {
                    "column2": -1,
                  },
                  "name": "column2_",
                  "properties": Object {},
                  "readonly": true,
                },
                "name": "column2_",
                "parent": [Circular],
                "properties": Object {},
                "readonly": true,
              },
              "parent": [Circular],
              "readonly": false,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "createdAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "updatedAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
          ],
          "indexes": Array [
            IndexDataset {
              "columns": Array [
                Array [
                  ColumnDataset {
                    "collection": [Circular],
                    "column": Object {
                      "name": "column2",
                      "required": true,
                      "subColumns": Array [],
                      "type": "object",
                    },
                    "columns": Array [],
                    "index": [Circular],
                    "parent": [Circular],
                    "readonly": false,
                    "subTypes": Array [],
                  },
                  -1,
                ],
              ],
              "index": Object {
                "columns": Object {
                  "column2": -1,
                },
                "name": "column2_",
                "properties": Object {},
                "readonly": true,
              },
              "name": "column2_",
              "parent": [Circular],
              "properties": Object {},
              "readonly": true,
            },
          ],
          "name": "c1",
          "parent": [MockFunction],
        },
        "column": Object {
          "name": "column1",
          "type": "string",
        },
        "columns": Array [],
        "index": undefined,
        "parent": CollectionDataset {
          "columns": Array [
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "_id",
                "type": "objectId",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            [Circular],
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "column2",
                "required": true,
                "subColumns": Array [],
                "type": "object",
              },
              "columns": Array [],
              "index": IndexDataset {
                "columns": Array [
                  Array [
                    [Circular],
                    -1,
                  ],
                ],
                "index": Object {
                  "columns": Object {
                    "column2": -1,
                  },
                  "name": "column2_",
                  "properties": Object {},
                  "readonly": true,
                },
                "name": "column2_",
                "parent": [Circular],
                "properties": Object {},
                "readonly": true,
              },
              "parent": [Circular],
              "readonly": false,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "createdAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "updatedAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
          ],
          "indexes": Array [
            IndexDataset {
              "columns": Array [
                Array [
                  ColumnDataset {
                    "collection": [Circular],
                    "column": Object {
                      "name": "column2",
                      "required": true,
                      "subColumns": Array [],
                      "type": "object",
                    },
                    "columns": Array [],
                    "index": [Circular],
                    "parent": [Circular],
                    "readonly": false,
                    "subTypes": Array [],
                  },
                  -1,
                ],
              ],
              "index": Object {
                "columns": Object {
                  "column2": -1,
                },
                "name": "column2_",
                "properties": Object {},
                "readonly": true,
              },
              "name": "column2_",
              "parent": [Circular],
              "properties": Object {},
              "readonly": true,
            },
          ],
          "name": "c1",
          "parent": [MockFunction],
        },
        "readonly": false,
        "subTypes": Array [],
      },
    },
  },
  Object {
    "name": "[2m|[22m column2   [2m|[22m object   [2m|[22m    ✔     [2m|[22m           [2m|[22m -1        [2m|[22m        [2m|[22m        [2m|[22m",
    "short": "Column - column2",
    "value": Object {
      "data": ColumnDataset {
        "collection": CollectionDataset {
          "columns": Array [
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "_id",
                "type": "objectId",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "column1",
                "type": "string",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": false,
              "subTypes": Array [],
            },
            [Circular],
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "createdAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "updatedAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
          ],
          "indexes": Array [
            IndexDataset {
              "columns": Array [
                Array [
                  [Circular],
                  -1,
                ],
              ],
              "index": Object {
                "columns": Object {
                  "column2": -1,
                },
                "name": "column2_",
                "properties": Object {},
                "readonly": true,
              },
              "name": "column2_",
              "parent": [Circular],
              "properties": Object {},
              "readonly": true,
            },
          ],
          "name": "c1",
          "parent": [MockFunction],
        },
        "column": Object {
          "name": "column2",
          "required": true,
          "subColumns": Array [],
          "type": "object",
        },
        "columns": Array [],
        "index": IndexDataset {
          "columns": Array [
            Array [
              [Circular],
              -1,
            ],
          ],
          "index": Object {
            "columns": Object {
              "column2": -1,
            },
            "name": "column2_",
            "properties": Object {},
            "readonly": true,
          },
          "name": "column2_",
          "parent": CollectionDataset {
            "columns": Array [
              ColumnDataset {
                "collection": [Circular],
                "column": Object {
                  "name": "_id",
                  "type": "objectId",
                },
                "columns": Array [],
                "index": undefined,
                "parent": [Circular],
                "readonly": true,
                "subTypes": Array [],
              },
              ColumnDataset {
                "collection": [Circular],
                "column": Object {
                  "name": "column1",
                  "type": "string",
                },
                "columns": Array [],
                "index": undefined,
                "parent": [Circular],
                "readonly": false,
                "subTypes": Array [],
              },
              [Circular],
              ColumnDataset {
                "collection": [Circular],
                "column": Object {
                  "name": "createdAt",
                  "type": "date",
                },
                "columns": Array [],
                "index": undefined,
                "parent": [Circular],
                "readonly": true,
                "subTypes": Array [],
              },
              ColumnDataset {
                "collection": [Circular],
                "column": Object {
                  "name": "updatedAt",
                  "type": "date",
                },
                "columns": Array [],
                "index": undefined,
                "parent": [Circular],
                "readonly": true,
                "subTypes": Array [],
              },
            ],
            "indexes": Array [
              [Circular],
            ],
            "name": "c1",
            "parent": [MockFunction],
          },
          "properties": Object {},
          "readonly": true,
        },
        "parent": CollectionDataset {
          "columns": Array [
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "_id",
                "type": "objectId",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "column1",
                "type": "string",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": false,
              "subTypes": Array [],
            },
            [Circular],
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "createdAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
            ColumnDataset {
              "collection": [Circular],
              "column": Object {
                "name": "updatedAt",
                "type": "date",
              },
              "columns": Array [],
              "index": undefined,
              "parent": [Circular],
              "readonly": true,
              "subTypes": Array [],
            },
          ],
          "indexes": Array [
            IndexDataset {
              "columns": Array [
                Array [
                  [Circular],
                  -1,
                ],
              ],
              "index": Object {
                "columns": Object {
                  "column2": -1,
                },
                "name": "column2_",
                "properties": Object {},
                "readonly": true,
              },
              "name": "column2_",
              "parent": [Circular],
              "properties": Object {},
              "readonly": true,
            },
          ],
          "name": "c1",
          "parent": [MockFunction],
        },
        "readonly": false,
        "subTypes": Array [],
      },
    },
  },
  Separator {
    "line": "[2m[2m|[2m createdAt [2m|[2m date     [2m|[2m          [2m|[2m           [2m|[2m           [2m|[2m        [2m|[2m        [2m|[2m[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m[2m|[2m updatedAt [2m|[2m date     [2m|[2m          [2m|[2m           [2m|[2m           [2m|[2m        [2m|[2m        [2m|[2m[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
  Separator {
    "line": "[2mNote: Columns \\"_id\\", \\"createdAt\\" and \\"updatedAt\\" are created automatically[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
]
`;

exports[`Check the ColumnMenu class it should be return menu selection when getChoiceList() is called with subcolumns 1`] = `
Array [
  Separator {
    "line": "[2m- No columns defined -[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
]
`;

exports[`Check the ColumnMenu class it should be return menu selection when getChoiceList() is called without columns 1`] = `
Array [
  Separator {
    "line": "[2m- No columns defined -[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
  Separator {
    "line": "[2mNote: Columns \\"_id\\", \\"createdAt\\" and \\"updatedAt\\" are created automatically[22m",
    "type": "separator",
  },
  Separator {
    "line": "[2m [22m",
    "type": "separator",
  },
]
`;
